--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="author" content="Lovable" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
     <meta property="og:title" content="c7e4aa0c-501a-4be4-985b-73914269aff4" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
