--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Portfolio - Modern Developer</title>
-    <meta name="description" content="A modern, minimalistic tech portfolio showcasing innovative projects and engineering excellence" />
+  <title>Nathan Hambleton – Portfolio</title>
+  <meta name="description" content="The personal portfolio of Nathan Hambleton. Explore projects, skills, and experience in modern web development." />
     
     <!-- JetBrains Mono Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="author" content="Lovable" />
+  <meta name="author" content="Nathan Hambleton" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/logo.png" />
 
-    <meta property="og:title" content="c7e4aa0c-501a-4be4-985b-73914269aff4" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:title" content="Nathan Hambleton – Portfolio" />
+  <meta property="og:description" content="Explore Nathan Hambleton's web development projects, skills, and experience." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/logo.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@nathanhamilton" />
+  <meta name="twitter:title" content="Nathan Hambleton – Portfolio" />
+  <meta name="twitter:description" content="Explore Nathan Hambleton's web development projects, skills, and experience." />
+  <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
